--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
+    <title>Index</title>
 </head>
 <body>
-    <a href="https://skillbox.ru/" target="_blank">
-      <img src="img/logo-light.png" alt="логотип skillbox" style="background-color: black;">
-    </a>
-    <div>
-      <a href="#">Modules</a>
-      <a href="/Indents.html">Indents</a>
+  
+    <div class="main-content">
+      <a class="img_logo" href="https://skillbox.ru/" target="_blank">
+        <img  src="img/logo-light.png" alt="логотип" >
+      </a>
+      <div class="main_menu">
+        <a class="main_menu--link" href="#">Modules</a>
+        <a class="main_menu--link" href="Indents.html">Indents</a>
+      </div>
+      <a href="2.14 skillbox.docx" download>Скачать программу</a>
     </div>
-    <a href="/2.14 skillbox (1).docx" download>Скачать программу</a>
-
 </body>
 </html>
