--- a/article.html
+++ b/article.html
@@ -15,13 +15,13 @@
         Правила организации отступов: как сделать вёрстку гибкой и не допустить
         ошибок
       </h1>
-      <p>
+      <p class="articl">
         Вёрстка должна быть <strong>максимально гибкой.</strong> Даже если
         заказчик или работодатель говорит, что сайт статичный и не будет
         меняться, всё равно стоит делать так, будто завтра добавят несколько
         блоков текста, несколько элементов или что-то ещё.
       </p>
-      <p>
+      <p class="articl">
         Нужно точно знать,
         <i
           >как поведут себя блоки при вёрстке, что произойдёт при изменениях.</i
@@ -32,35 +32,35 @@
       </p>
       <div class="main--content">
         <h2>Содержание</h2>
-        <p>
+        <p class="main-articl">
           Первая из частей - HTML. Это начальная стадия соблюдения кодстайла,
           ведь любой сайт вы начинаете писать именно с этого языка. Давайте
           посмотрим на основные правила:
         </p>
-        <ul>
+        <ul class="main-content_list">
           <li class="list_block">
-            <a href="#general_method">Основные принципы работы с отступами</a>
+            <a  class="main--content__link" href="#general_method">Основные принципы работы с отступами</a>
           </li>
           <li class="list_block">
-            <a href="#first_method"
+            <a class="main--content__link" href="#first_method"
               >Первый принцип: отступы от предыдущего к следующему</a
             >
           </li>
           <li class="list_block">
-            <a href="#second_method"
+            <a class="main--content__link" href="#second_method"
               >Второй принцип: отступы задаются только между соседями</a
             >
           </li>
           <li class="list_block">
-            <a href="#third_method"
+            <a class="main--content__link main--content__link--last" href="#third_method"
               >Третий принцип: у последнего элемента группы обнуляем отступ</a
             >
           </li>
         </ul>
       </div>
-      <h3 id="general_method">Основные принципы работы с отступами</h3>
+      <h3 class="general-artic">Основные принципы работы с отступами</h3>
 
-      <p>
+      <p class="articl">
         У любого сайта или документа есть так называемый поток — порядок вывода
         объектов в документе. В вёрстке этот поток идёт сверху вниз, слева
         направо. Именно поэтому, если какой-то элемент на макете находится
@@ -71,53 +71,53 @@
       <h3 id="first_method">
         Отступы задаются от предыдущего элемента к следующему
       </h3>
-      <p>
+      <p class="articl">
         Это значит, что в вёрстке нужно стараться использовать CSS-свойства
         <strong>margin-right</strong> и <strong>margin-bottom</strong>, то есть
         отступ справа и отступ снизу. Проще говоря - избегаем отступов слева и
         сверху полностью.
       </p>
 
-      <figure>
+      <figure class="main-content--fig">
         <img src="img/1.jpg" alt="Отступы" />
-        <figcaption>
+        <figcaption class="main-content--cap">
           На скриншоте видно, как правильно задавать отступы, — только справа и
           снизу (показано оранжевым)
         </figcaption>
       </figure>
 
-      <p>
+      <p class="articl">
         Внешние отступы сверху и слева
         <strong>(margin-top и margin-left)</strong> заменяются на аналогичные
         внутренние отступы <strong>(padding)</strong> у родителя элементов.
       </p>
-      <img src="img/2.jpg" alt="2" />
-      <p>
+      <img src="img/2.jpg" alt="Внешние отступы" />
+      <p class="articl">
         Получается, что блок не может сдвигаться благодаря своим отступам, — он
         делает это только за счёт соседних элементов (и сам двигает соседние).
       </p>
 
-      <h3 id="second_method">
+      <h3 class="general-artic">
         Отступы задаются только между соседними элементами в потоке
       </h3>
 
-      <p>
+      <p class="articl">
         Если у блока нет соседа с левой стороны — задавать ему отступ слева
         нельзя. То же самое касается любой из сторон.
-
-        <img src="img/3.jpg" alt="3" />
       </p>
+      <img src="img/3.jpg" alt="отступ слева нельзя" />
 
-      <p>
+
+      <p class="articl">
         У обоих задан отступ снизу. Для первого списка это применимо, потому что
         есть сосед снизу — второй список. А для второго, не имеющего такого
         соседа, — отступа нет.
       </p>
 
-      <figure>
-        <img src="img/4.jpg" alt="4" />
+      <figure class="main-content--fig">
+        <img src="img/4.jpg" alt="отступ снизу" />
 
-        <figcaption>
+        <figcaption class="main-content--cap">
           На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает
           размер «родителя» с голубым фоном, образуя лишний отступ — типичную
           ошибку вёрстки.
@@ -125,40 +125,40 @@
       </figure>
 
       <h3>Последнему элементу группы нужно обнулять отступ</h3>
-      <p>
+      <p class="articl">
         Это легко сделать с помощью псевдоклассов в CSS. Например, есть
         псевдокласс <strong>:last-child</strong>, который позволяет выбрать
         последний элемент из группы (например, как в нашем случае: мы найдём
         последний элемент списка).
       </p>
-      <p>
+      <p class="articl">
         С помощью <strong>:last-child</strong> мы обнуляем отступ у последнего
         <strong>ul</strong>, как показано в примере. Теперь всё работает как
         надо.
       </p>
 
-      <img class="img-content" src="img/5.jpg" alt="5" />
-      <p>
+      <img class="img-content" src="img/5.jpg" alt="пример :last-child" />
+      <p  class="articl">
         Чтобы не создавать два селектора, можно написать короче, используя
         псевдокласс :not. Тут мы буквально говорим следующее: «Задай отступ всем
         ul, но не последнему».
       </p>
-      <img class="img-content" src="img/6.jpg" alt="6" />
+      <img class="img-content" src="img/6.jpg" alt=":not пример" />
 
       <h3 id="third_method">Типичный пример: отступы в карточке</h3>
-      <p>
+      <p class="articl">
         Рассмотрим типичный пример — реализацию карточки с контентом на сайте.
         Как здесь лучше поступить?
       </p>
-      <p>
+      <p class="articl">
         В нашем примере самая простая карточка: с картинкой, заголовком и
         описанием. Как правильнее сделать отступы у заголовка и описания? На
         самом деле, всё очень просто: нужно применить принципы, о которых я
         рассказал.
       </p>
 
-      <img class="img-content" src="img/7.jpg" alt="7" />
-      <p>
+      <img class="img-content" src="img/7.jpg" alt="применить принципы" />
+      <p class="articl">
         Нам достаточно обернуть весь текст карточки в блок и задать блоку
         внутренний отступ — padding. Так наша вёрстка будет соответствовать
         сразу трём принципам. А чтобы сделать отступ между заголовком и
@@ -166,7 +166,7 @@
       </p>
       <div class="footer--content main--content">
         <h2>Итог</h2>
-        <p>
+        <p class="articl articl--last ">
           Это основные правила организации отступов, которые помогут вам сделать
           вёрстку качественной и гибкой. Главное — начать им следовать. Со
           временем их соблюдение войдёт в привычку и вы начнёте сразу понимать,
