--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Index</title>
 </head>
 <body>
-  
+
     <div class="main-content">
       <a class="img_logo" href="https://skillbox.ru/" target="_blank">
         <img  src="img/logo-light.png" alt="логотип" >
       </a>
       <div class="main_menu">
         <a class="main_menu--link" href="#">Modules</a>
-        <a class="main_menu--link" href="Indents.html">Indents</a>
+        <a class="main_menu--link" href="article.html">Indents</a>
       </div>
       <a href="2.14 skillbox.docx" download>Скачать программу</a>
     </div>
