--- a/article.html
+++ b/article.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <h1 class="conteiner--articl">
-        Правила организации отступов: как сделать вёрстку гибкой и не допустить
+        <strong>Правила организации отступов:</strong> как сделать вёрстку гибкой и не допустить
         ошибок
       </h1>
       <p class="articl">
@@ -31,7 +31,7 @@
         ошибок.
       </p>
       <div class="main--content">
-        <h2>Содержание</h2>
+        <h2 class="headline">Содержание</h2>
         <p class="main-articl">
           Первая из частей - HTML. Это начальная стадия соблюдения кодстайла,
           ведь любой сайт вы начинаете писать именно с этого языка. Давайте
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </div>
-      <h3 class="general-artic">Основные принципы работы с отступами</h3>
+      <h3 class="general-artic headline_level-3">Основные принципы работы с отступами</h3>
 
       <p class="articl">
         У любого сайта или документа есть так называемый поток — порядок вывода
@@ -66,9 +66,9 @@
         направо. Именно поэтому, если какой-то элемент на макете находится
         справа, он должен в HTML-коде идти последним из своей группы.
       </p>
-      <p>Исходя из этого, можно сразу сформулировать первый принцип.</p>
+      <p class="articl articl__special">Исходя из этого, можно сразу сформулировать первый принцип.</p>
 
-      <h3 id="first_method">
+      <h3 id="first_method" class="headline_level-3">
         Отступы задаются от предыдущего элемента к следующему
       </h3>
       <p class="articl">
@@ -91,13 +91,13 @@
         <strong>(margin-top и margin-left)</strong> заменяются на аналогичные
         внутренние отступы <strong>(padding)</strong> у родителя элементов.
       </p>
-      <img src="img/2.jpg" alt="Внешние отступы" />
+      <img class="img-content" src="img/2.jpg" alt="Внешние отступы" />
       <p class="articl">
         Получается, что блок не может сдвигаться благодаря своим отступам, — он
         делает это только за счёт соседних элементов (и сам двигает соседние).
       </p>
 
-      <h3 class="general-artic">
+      <h3 class="general-artic headline_level-3">
         Отступы задаются только между соседними элементами в потоке
       </h3>
 
@@ -105,7 +105,7 @@
         Если у блока нет соседа с левой стороны — задавать ему отступ слева
         нельзя. То же самое касается любой из сторон.
       </p>
-      <img src="img/3.jpg" alt="отступ слева нельзя" />
+      <img class="img-content" src="img/3.jpg" alt="отступ слева нельзя" />
 
 
       <p class="articl">
@@ -124,7 +124,7 @@
         </figcaption>
       </figure>
 
-      <h3>Последнему элементу группы нужно обнулять отступ</h3>
+      <h3 class="headline_level-3">Последнему элементу группы нужно обнулять отступ</h3>
       <p class="articl">
         Это легко сделать с помощью псевдоклассов в CSS. Например, есть
         псевдокласс <strong>:last-child</strong>, который позволяет выбрать
@@ -145,7 +145,7 @@
       </p>
       <img class="img-content" src="img/6.jpg" alt=":not пример" />
 
-      <h3 id="third_method">Типичный пример: отступы в карточке</h3>
+      <h3 id="third_method" class="headline_level-3">Типичный пример: отступы в карточке</h3>
       <p class="articl">
         Рассмотрим типичный пример — реализацию карточки с контентом на сайте.
         Как здесь лучше поступить?
@@ -165,7 +165,7 @@
         описанием, достаточно просто сделать отступ снизу — для заголовка.
       </p>
       <div class="footer--content main--content">
-        <h2>Итог</h2>
+        <h2 class="headline">Итог</h2>
         <p class="articl articl--last ">
           Это основные правила организации отступов, которые помогут вам сделать
           вёрстку качественной и гибкой. Главное — начать им следовать. Со
