--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <a class="main_menu--link" href="#">Modules</a>
         <a class="main_menu--link" href="article.html">Indents</a>
       </div>
-      <a href="2.14 skillbox.docx" download>Скачать программу</a>
+
+      <a href="2.14 skillbox.docx" class="main_menu--download" download>Скачать программу</a>
     </div>
+
 </body>
 </html>
