--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img  src="img/logo-light.png" alt="логотип" >
       </a>
       <div class="main_menu">
-        <a class="main_menu--link" href="#">Modules</a>
+        <a class="main_menu--link" href="modules.html">Modules</a>
         <a class="main_menu--link" href="article.html">Indents</a>
       </div>
 
