--- a/modules.html
+++ b/modules.html
@@ -39,9 +39,9 @@
               <div class="container_list-number">02</div>
             </div>
           </li>
-          <li class="container_list">
+          <li class="container_list container_list-main--fix">
             <img src="/img/base_css.jpg" alt="базовый css" class="container_img">
-            <div class="container_list-main">
+            <div class="container_list-main ">
               <div class="container_list-articl">Базовый CSS</div>
               <p class="container_list-paragraf">Подключение CSS</p>
               <p class="container_list-paragraf">Вес селектора</p>
@@ -51,7 +51,7 @@
               <div class="container_list-number">03</div>
             </div>
           </li>
-          <li class="container_list">
+          <li class="container_list container_list-main--fix">
             <img src="/img/maket.jpg" alt="работа с макетом" class="container_img">
             <div class="container_list-main">
               <div class="container_list-articl">Работа с макетом</div>
