--- a/modules.html
+++ b/modules.html
@@ -10,14 +10,14 @@
 </head>
 <body>
       <div class="container">
-        <img src="/img/skillbox 1.svg" alt="логотип" class="container_logo">
+        <img src="img/skillbox 1.svg" alt="логотип" class="container_logo">
         <div class="container_back">
           <a href="index.html" class="container-back_link">На главную</a>
         </div>
         <h1 class="container_articl">Модули курса Веб-верстка</h1>
         <ul class="container_items">
           <li class="container_list">
-            <img src="/img/intro.jpg" alt="введение" class="container_img">
+            <img src="img/intro.jpg" alt="введение" class="container_img">
             <div class="container_list-main">
               <div class="container_list-articl">Введение</div>
               <p class="container_list-paragraf">Как работают сайты. Верстка</p>
@@ -28,7 +28,7 @@
             </div>
           </li>
           <li class="container_list">
-            <img src="/img/base_html.jpg" alt="базовый html" class="container_img">
+            <img src="img/base_html.jpg" alt="базовый html" class="container_img">
             <div class="container_list-main">
               <div class="container_list-articl">Базовый HTML</div>
               <p class="container_list-paragraf">Базовые теги</p>
@@ -40,7 +40,7 @@
             </div>
           </li>
           <li class="container_list container_list-main--fix">
-            <img src="/img/base_css.jpg" alt="базовый css" class="container_img">
+            <img src="img/base_css.jpg" alt="базовый css" class="container_img">
             <div class="container_list-main ">
               <div class="container_list-articl">Базовый CSS</div>
               <p class="container_list-paragraf">Подключение CSS</p>
@@ -52,7 +52,7 @@
             </div>
           </li>
           <li class="container_list container_list-main--fix">
-            <img src="/img/maket.jpg" alt="работа с макетом" class="container_img">
+            <img src="img/maket.jpg" alt="работа с макетом" class="container_img">
             <div class="container_list-main">
               <div class="container_list-articl">Работа с макетом</div>
               <p class="container_list-paragraf">Про форматы изображений</p>
