--- a/article.html
+++ b/article.html
@@ -30,7 +30,7 @@
         менять, улучшать и масштабировать вёрстку и уберегут вас от типичных
         ошибок.
       </p>
-      <div class="main--content">
+      <div class="main--content  main--content__pic">
         <h2 class="headline">Содержание</h2>
         <p class="main-articl">
           Первая из частей - HTML. Это начальная стадия соблюдения кодстайла,
