--- a/modules.html
+++ b/modules.html
@@ -10,14 +10,15 @@
 </head>
 <body>
       <div class="container">
-        <img src="img/skillbox 1.svg" alt="логотип" class="container_logo">
+        <a href="#" class="container-link_logo">
+          <img src="img/skillbox 1.svg" alt="логотип" class="container_logo">
+        </a>  
         <div class="container_back">
           <a href="index.html" class="container-back_link">На главную</a>
         </div>
         <h1 class="container_articl">Модули курса Веб-верстка</h1>
         <ul class="container_items">
-          <li class="container_list">
-            <img src="img/intro.jpg" alt="введение" class="container_img">
+          <li class="container_list container_list-pic1">
             <div class="container_list-main">
               <div class="container_list-articl">Введение</div>
               <p class="container_list-paragraf">Как работают сайты. Верстка</p>
@@ -27,8 +28,7 @@
               <div class="container_list-number">01</div>
             </div>
           </li>
-          <li class="container_list">
-            <img src="img/base_html.jpg" alt="базовый html" class="container_img">
+          <li class="container_list container_list-pic2">
             <div class="container_list-main">
               <div class="container_list-articl">Базовый HTML</div>
               <p class="container_list-paragraf">Базовые теги</p>
@@ -39,8 +39,7 @@
               <div class="container_list-number">02</div>
             </div>
           </li>
-          <li class="container_list container_list-main--fix">
-            <img src="img/base_css.jpg" alt="базовый css" class="container_img">
+          <li class="container_list container_list-main--fix container_list-pic3">
             <div class="container_list-main ">
               <div class="container_list-articl">Базовый CSS</div>
               <p class="container_list-paragraf">Подключение CSS</p>
@@ -51,8 +50,7 @@
               <div class="container_list-number">03</div>
             </div>
           </li>
-          <li class="container_list container_list-main--fix">
-            <img src="img/maket.jpg" alt="работа с макетом" class="container_img">
+          <li class="container_list container_list-main--fix container_list-pic4">
             <div class="container_list-main">
               <div class="container_list-articl">Работа с макетом</div>
               <p class="container_list-paragraf">Про форматы изображений</p>
@@ -62,9 +60,9 @@
             </div>
           </li>
         </ul>
-        <div class="footer">
+        <button class="footer">
           <a href="" class="footer-link">Показать еще</a>
-          </div>
+        </button>
       </div>
 </body>
 </html>
