--- a/modules.html
+++ b/modules.html
@@ -39,7 +39,7 @@
               <div class="container_list-number">02</div>
             </div>
           </li>
-          <li class="container_list container_list-main--fix container_list-pic3">
+          <li class="container_list  container_list-pic3">
             <div class="container_list-main ">
               <div class="container_list-articl">Базовый CSS</div>
               <p class="container_list-paragraf">Подключение CSS</p>
@@ -50,7 +50,7 @@
               <div class="container_list-number">03</div>
             </div>
           </li>
-          <li class="container_list container_list-main--fix container_list-pic4">
+          <li class="container_list  container_list-pic4">
             <div class="container_list-main">
               <div class="container_list-articl">Работа с макетом</div>
               <p class="container_list-paragraf">Про форматы изображений</p>
