--- a/modules.html
+++ b/modules.html
@@ -12,57 +12,59 @@
       <div class="container">
         <a href="#" class="container-link_logo">
           <img src="img/skillbox 1.svg" alt="логотип" class="container_logo">
-        </a>  
-        <div class="container_back">
-          <a href="index.html" class="container-back_link">На главную</a>
-        </div>
+        </a>
+
+        <a href="index.html" class="container-back_link">На главную</a>
+
         <h1 class="container_articl">Модули курса Веб-верстка</h1>
         <ul class="container_items">
           <li class="container_list container_list-pic1">
-            <div class="container_list-main">
+
               <div class="container_list-articl">Введение</div>
               <p class="container_list-paragraf">Как работают сайты. Верстка</p>
               <p class="container_list-paragraf">Возможности HTML, CSS, JS</p>
               <p class="container_list-paragraf">Редактор кода. Codepen</p>
               <p class="container_list-paragraf">Работа с DevTools</p>
-              <div class="container_list-number">01</div>
-            </div>
+              <span class="container_list-number">01</span>
+
           </li>
           <li class="container_list container_list-pic2">
-            <div class="container_list-main">
+
               <div class="container_list-articl">Базовый HTML</div>
               <p class="container_list-paragraf">Базовые теги</p>
               <p class="container_list-paragraf">Теги картинок и ссылок</p>
               <p class="container_list-paragraf">Теги таблиц</p>
               <p class="container_list-paragraf">Служебные теги</p>
               <p class="container_list-paragraf">Кодстайл HTML</p>
-              <div class="container_list-number">02</div>
-            </div>
+              <span class="container_list-number">02</span>
+
           </li>
           <li class="container_list  container_list-pic3">
-            <div class="container_list-main ">
+
               <div class="container_list-articl">Базовый CSS</div>
               <p class="container_list-paragraf">Подключение CSS</p>
               <p class="container_list-paragraf">Вес селектора</p>
               <p class="container_list-paragraf">Свойство display</p>
               <p class="container_list-paragraf">Блочная модель и позиционирование</p>
               <p class="container_list-paragraf">Кодстайл CSS</p>
-              <div class="container_list-number">03</div>
-            </div>
+              <span class="container_list-number">03</span>
+
           </li>
           <li class="container_list  container_list-pic4">
-            <div class="container_list-main">
+
               <div class="container_list-articl">Работа с макетом</div>
               <p class="container_list-paragraf">Про форматы изображений</p>
               <p class="container_list-paragraf">Работа с макетом в Photoshop</p>
               <p class="container_list-paragraf">Работа с макетом в Figma</p>
-              <div class="container_list-number">04</div>
-            </div>
+              <span class="container_list-number">04</span>
+
           </li>
         </ul>
-        <button class="footer">
-          <a href="" class="footer-link">Показать еще</a>
-        </button>
+        <footer class="footer">
+          <button class="footer-btn">
+            Показать еще
+          </button>
+        </footer>
       </div>
 </body>
 </html>
